--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -31,7 +31,7 @@
                         <a class="dropdown-item mb-2 text-muted" href="#"><strong>{{user.username}}</strong></a>
                         <a class="dropdown-item" href="#">Dashboard</a>
                         <a class="dropdown-item" href="#">Edit Profile</a>
-                        <a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a>
+                        <a class="dropdown-item" href="#">Log Out</a>
                     </div>
                 </div>
                 {% else %}
