--- a/templates/courses/home.html
+++ b/templates/courses/home.html
@@ -20,7 +20,7 @@
                 <div class='col-md-4 col-12'>
                     
                     <div class="card shadow">
-                        <img src="{% static 'img/placeholder.jpg' %}" class="card-img-top" alt="...">
+                        <img src="{% static 'img/placeholder.svg' %}" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">{{course.title}}</h5>
                             <p class="card-text">{{course.description}}</p>
