--- a/templates/bases/index.html
+++ b/templates/bases/index.html
@@ -53,6 +53,6 @@
 
     {% include 'partials/_modal_auth.html' %}
 
-    {% block scripts %}{% endblock %}
+    {% block last_content %}{% endblock %}
 </body>
 </html>
