--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -19,7 +19,7 @@
                 <div class='card shadow-sm'>
                     <div class='row'>
                         <div class='col-md-6 col-12'>
-                            <img src="{% static 'img/book.svg' %}" class="card-img-top p-2" alt="...">
+                            <img src="{% static 'img/placeholder.svg' %}" class="card-img-top p-2" alt="...">
                         </div>
                         <div class='col-md-6 col-12'>
                           <div class='card-body'>
