--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -29,7 +29,7 @@
                                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
                                 nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                             </p>
-                            <a href="" class='btn btn-primary btn-lg btn-block mt-5'>Enroll</a>
+                            <a href="{% url 'enroll' %}" class='btn btn-primary btn-lg btn-block mt-5'>Enroll for Monday 12 October</a>
                           </div>
                         </div>        
                     </div>
