--- a/templates/courses/home.html
+++ b/templates/courses/home.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class='card-body p-0 px-3'>
                             <a class='btn btn-primary btn-block' href='{% url "enroll" %}'>{% trans "Enroll for Monday 12 october" %}</a>
-                            <a class='btn btn-outline-secondary btn-block' href='#'>{% trans "Learn more" %}</a>
+                            <a class='btn btn-outline-secondary btn-block' href="{% url 'course_detail' %}">{% trans "Learn more" %}</a>
                         </div>
                         <div class="card-body">
                             <div class='row text-muted'>
