--- a/templates/courses/home.html
+++ b/templates/courses/home.html
@@ -33,7 +33,7 @@
                             <div class='row text-muted'>
                                 <div class='col-12'>
                                     <i class='fa fa-chair'></i>
-                                    10 {% trans "remaining" %}
+                                    10 {% trans "places remaining" %}
                                 </div>
                             </div>
                         </div>
