--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -12,14 +12,14 @@
 {% endblock %}
 
 {% block content %}
-    {% include 'partials/_subheader.html' with subheader_title='courses / introduction-to-algorithm' %}
+    {% include 'partials/_subheader.html' with subheader_title='introduction to algorithm' %}
     <div class='container mt-3'>
         <div class='row justify-content-center'>
             <div class='col-md-10 col-12'>
                 <div class='card shadow-sm'>
                     <div class='row'>
                         <div class='col-md-6 col-12'>
-                            <img src="{% static 'img/placeholder.svg' %}" class="card-img-top p-2" alt="...">
+                            <img src="{% static 'img/placeholder.svg' %}" class="card-img-top " alt="...">
                         </div>
                         <div class='col-md-6 col-12'>
                           <div class='card-body'>
