--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -24,9 +24,9 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br>
+              2eme Ruelle Nazon<br>
+              Port au Prince<br>
+              Haiti <br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
               <strong>Email:</strong> info@example.com<br>
             </p>
@@ -62,7 +62,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/serenity-bootstrap-corporate-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">Makerlab</a>
+        Designed by <a>Makerlab</a>
       </div>
     </div>
   </footer><!-- End Footer -->
