--- a/templates/courses/enrollement.html
+++ b/templates/courses/enrollement.html
@@ -27,12 +27,12 @@
                     <h3 class='card-title'>Introduction to Algorithms</h3>
                     <ul class="list-group">
                         <li class="list-group-item">November 17 2020 15:30 AM</li>
-                        <li class="list-group-item">37th enrolled</li>
-                        <li class="list-group-item">1000 HTG Fees</li>
+                        <li class="list-group-item">Tutor Meritus Freedy</li>
+                        <li class="list-group-item">1000 HTG Enrollement Fee</li>
                     </ul>
                     
-                     <div class='row justify-content-end'>
-                        <a href="{% url 'proceed' %}" ><img src="{% static 'img/mcbuttond.png' %}" height=40 class='mt-3 mr-3'></a>
+                     <div class='row justify-content-center'>
+                        <a href="{% url 'proceed' %}" ><img src="{% static 'img/mcbuttond.png' %}" height=44 class='mt-3'></a>
                      </div>
                 </div>
             
