--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,7 +40,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.6); /*dim the background*/
+  background-color: rgba(0,0,0,0.5); /*dim the background*/
 }
 
 /* Searchbar 
@@ -175,6 +175,8 @@ Usage:
   border-color: #ededed;
 }
 
+/* Footer.
+--------------------------------------------------------------------------- */
 
 #footer {
   background: #343a40;
@@ -207,7 +209,6 @@ Usage:
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 0;
-  font-family: "Raleway", sans-serif;
   color: #fff;
 }
 
