--- a/templates/bases/index.html
+++ b/templates/bases/index.html
@@ -47,9 +47,6 @@
     {% include 'partials/_header.html' %}
     
     {% block content %}{% endblock %}
-
-    <!-- Footer -->
-    {% include 'partials/_footer.html' %} 
     
     <script type="text/javascript" src="{% static '/js/jquery_v3.5.1.js' %} "></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -58,7 +55,11 @@
     
 
     {% include 'partials/_modal_auth.html' %}
+    
 
-    {% block last_content %}{% endblock %}
+    {% block last_content %}
+        <!-- Footer -->
+        {% include 'partials/_footer.html' %} 
+    {% endblock %}
 </body>
 </html>
