--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -41,7 +41,7 @@
             </div>
         </div>
     </div>
-    <div class='container mt-3 p-3'>
+    <div class='container p-5'>
         <div class='row justify-content-center'>
             <div class='text-center'>
                 <h2 class='font-weigth-bold typed'>Attend at workshop on <span id='typed'></span></h2>
@@ -54,6 +54,7 @@
 {% endblock %}
 
  {% block last_content %}
+    {{block.super}}
      <div id='typed-strings'>
         <p>microcontrollers</p>
         <p>pcb design</p>
