--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -6,8 +6,8 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>Makerlab</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+            <h3>ESIH MakerLab</h3>
+            <p>Home of creativity</p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
@@ -35,7 +35,6 @@
               <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
               <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
               <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="icofont-skype"></i></a>
               <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
 
@@ -55,14 +54,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Makerlab</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/serenity-bootstrap-corporate-template/ -->
-        Designed by <a>Makerlab</a>
+        &copy; Copyright <strong><span>Makerlab</span></strong>. 2020
       </div>
     </div>
   </footer><!-- End Footer -->
