--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -58,7 +58,7 @@
      <div id='typed-strings'>
         <p>microcontrollers</p>
         <p>pcb design</p>
-        <p>programming</p>
+        <p>C++ programming<p>
         <p>3D printing</p>
         <p>latex</p>
         <p>CAD<p>
