--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!--Main Navigation-->
 <header>
-    <nav class="navbar shadow navbar-expand-lg navbar-dark bg-dark py-3">
+    <nav class="navbar shadow navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}"><strong>MakerLab</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
