--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,32 +1,35 @@
-{% extends 'bases/index.html' %}
+{% extends 'bases/index.html'%}
 {% load static %}
 {% load i18n %}
-{% load crispy_forms_tags %}
-
-{% block extra_head %}
-
-    <style>
-        body{
-            background-color: #f9f9f9;
-        }
-    </style>
-
-{% endblock %}
-
-{% block title %}Create an account{% endblock %}
-
 {% block content %}
-    <div class='container mt-4'>
-        <div class='row justify-content-center'>
-            <div>
-                <p class='text-muted'>Join ESIH MakeLab</p>
-                <h1>Create an account</h1>
-                <form method="post">
-                    {{ user_form | crispy }}
-                    {% csrf_token %}
-                    <input type="submit" value="Create my account" class='btn btn-primary btn-block'>
-                </form>
+    {% if user.is_authenticated %}
+        {% include '../partials/_auth_ok.html' %}
+    {% else %}
+        {% load crispy_forms_tags %}
+        <div class="container row col-12 pt-4">
+            <div class="col-md-7 text-center">
+                <img class="col-12" style="max-height:60vh;" src="{% static 'css_custom/img/undraw_Security_on_ff2u.svg' %}" alt="">
             </div>
+            <form  class="col-md-5  container mt-2 mb-4 p-0" method="post">
+                <div class="col-12 mb-2 text-center  p-1">  
+                    <span class="form-group h3"  style="font-weight: 600;">{% trans "Login" %} </span>
+                </div>
+                <div class="col-12">
+                    {% include 'partials/_alerts.html' %}
+                    {% csrf_token %}
+                    {{form|crispy}}
+                    <div class="mb-2">
+                        <a  href="{% url 'reset_password_request' %}">{% trans "Forget password" %}  </a>
+                    </div>
+                    <button type="submit" class="btn btn-primary">{% trans "send" %} </button>
+                </div><br>
+                <div class="col-12">
+                    <div class="mb-2">
+                      {% trans "Don't have an account?" %}  <a  href="{% url 'register' %}"> {% trans " Sign up " %}</a>
+                    </div>
+                </div>
+            </form>
         </div>
-    </div>
+        
+    {% endif %}
 {% endblock %}
