--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,6 +1,6 @@
 {% extends 'bases/index.html' %}
 {% load static %}
-
+{% load i18n %}
 {% block content %}
  <div class='container mt-5 text-center'>
     
