add is_teacher field in account add related name teacher in account setup search

--- a/templates/courses/search_results.html
+++ b/templates/courses/search_results.html
@@ -13,8 +13,7 @@
                 </div>
                 <!--end of col-->
                 <div class="col">
-                    
-                    <input required name="q" class="form-control form-control-md form-control-borderless " type="search" placeholder="Search topics or keywords">
+                    <input required name="q" value="{{q}}" class="form-control form-control-md form-control-borderless " type="search" placeholder="Search topics or keywords">
                 </div>
                 <!--end of col-->
                 <div class="col-auto">
