--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -3,7 +3,7 @@
 <header>
     <nav class="navbar shadow navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}"><strong>MakerLab</strong></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/newlogo.png' %}" width="200px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
